animated img insert

--- a/Site/style.css
+++ b/Site/style.css
@@ -1,6 +1,6 @@
 body{
     color: white;
-    background-image:url(premium_photo-1677916317230-d9b78d675264.avif) ;
+    background-image:url(giphy.gif) ;
     background-size: cover;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
